# sniffa

./: README.md
pysniffa/: pyproject.toml
pysniffa/sniffa/: __init__.py  __main__.py
pysniffa/tests/: test_main.py
rsniffa/: Cargo.toml  README.md  pyproject.toml
rsniffa/src/: lib.rs  sniffer.rs
