[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rsniffa"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "black~=23.12.1",
    "flake8~=7.0.0",
    "isort~=5.13.2",
    "maturin[patchelf]~=1.5.1",
    "mypy~=1.8.0",
    "pytest~=7.4.4",
    #"setuptools-scm~=8.0.4",
]

[tool.black]
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
multi_line_output = 3
use_parentheses = true

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.mypy]
exclude = "build/"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
